examples/type_system/failing/170_match_disagreement_all_concrete_ordering_invariant_e300.flx
fn main() -> Unit {
    let y: Int = match true {
        true -> "oops",
        false -> 1,
    }
}
